--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ p{
 .contact-form{
   margin-top:50px;
   padding:20px;
-  background-color:#fff;
+  background-color:transparent;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 .contact-form h2{
